2006-06-27  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixing Skara Brae Ferry problem (bug #1521291).

2006-07-16    <jeff@mini.nerble.net>

	* shapes/shapeinf.h (public): Don't divide striking range by 2; I
	think that was a mistake.

2006-07-14    <jeff@mini.nerble.net>

	* rect.h, paths.cc, objs.cc, combat.cc: Avoid attacks through
	walls by checking LOF for striking weapons.

2006-06-27    <jeff@mini.nerble.net>

	* gamemap.cc: Shift-F3 writes out "patch/minimaps.vga", with a
	frame for each game map (192x192 pixels).

2006-06-27  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixing crash (due to terrains not being loaded) and pointer mix-up (causing
	  wrong colors in the generated minimap) in the new minimap generator.

2006-06-26  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bug where 'stray' items on the ground would be picked up
	  by the carpet even though they shouldn't.

2006-06-14  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* intrinsics.cc: Fixed multimap issue when casting 'mark' on a virtue stone
	  when the stone is not directly on the map.
	* actors.cc, ready.h, objs/contain.cc, mapedit/shapeedit.cc and
	  mapedit/exult_studio.glade: Added an 'usecode container' item type to BG.
	  Also, in 'objs/contain.cc', changed the usecode container detection code
	  to use the item type instead of shape number.

2006-06-11 Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* midi/audio_drivers/mt32emu/i386.cpp: sync with scummvm to make it
	  compile with gcc 4

2006-04-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: fix delete/delete[] mixups

2006-04-18    <jeff@mini.nerble.net>

	* pathfinder/Zombie.cc: Straight-line pathfinder now works in
	3-dimensions, and combat projectile code allows shooting things at
	any height.

2006-04-07    <jeff@mini.nerble.net>

	* combat.cc: Support 'summon' by certain monsters (mages,
	liches).  Also added teleport, summon, and can-be-invisible flag